--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test:goals": "TZ=America/Chicago tsc --pretty false --noEmit false --module commonjs --moduleResolution node --baseUrl . --paths \"@/*\" \"./*\" --target es2020 --outDir .tmp-goal-tests scripts/goal-logic.test.ts && node .tmp-goal-tests/scripts/goal-logic.test.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
