--- a/scripts/tsconfig.goals.json
+++ b/scripts/tsconfig.goals.json
@@ -12,5 +12,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["goal-logic.test.ts", "../lib/**/*.ts"]
+  "include": ["goal-logic.test.ts", "badges.test.ts", "../lib/**/*.ts"]
 }
